UI-3292 set align center for searh field on issue CHAT-2

--- a/application/src/main/java/org/exoplatform/chat/portlet/chat/assets/base.less
+++ b/application/src/main/java/org/exoplatform/chat/portlet/chat/assets/base.less
@@ -18,6 +18,11 @@
   	padding: 2px;
   	margin: 0 3px;
   }
+  &.pull-right {
+    .uiSearchForm  {
+      margin-top: 11px;
+    }
+  }
 }
 
 .left-chat
